--- a/Initial_XGB.ipynb
+++ b/Initial_XGB.ipynb
@@ -6453,7 +6453,13 @@
     "# 0.466023945905\n",
     "# {'subsample': 0.75, 'learning_rate': 0.045, 'seed': 123, 'colsample_bytree': 0.75, 'max_depth': 7}\n",
     "# Best CV Score:\n",
-    "# 0.464491819425"
+    "# 0.464491819425\n",
+    "# {'subsample': 0.7, 'learning_rate': 0.05, 'seed': 48, 'colsample_bytree': 0.7, 'max_depth': 5}\n",
+    "# Best CV Score:\n",
+    "# 0.469789148742\n",
+    "# {'subsample': 0.7, 'learning_rate': 0.05, 'seed': 125, 'colsample_bytree': 0.7, 'max_depth': 5}\n",
+    "# Best CV Score:\n",
+    "# 0.469606240516"
    ]
   },
   {
