--- a/Latest_Iteration.ipynb
+++ b/Latest_Iteration.ipynb
@@ -17,7 +17,7 @@
     "from sklearn import model_selection, preprocessing\n",
     "import xgboost as xgb\n",
     "import datetime\n",
-    "seed = 37\n",
+    "seed = 125\n",
     "mult1 = .969\n",
     "mult2 = .969\n",
     "W_model_1_2 = .714"
@@ -33,9 +33,42 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:27: DeprecationWarning: \n",
+      ".ix is deprecated. Please use\n",
+      ".loc for label based indexing or\n",
+      ".iloc for positional indexing\n",
+      "\n",
+      "See the documentation here:\n",
+      "http://pandas.pydata.org/pandas-docs/stable/indexing.html#deprecate_ix\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:29: DeprecationWarning: \n",
+      ".ix is deprecated. Please use\n",
+      ".loc for label based indexing or\n",
+      ".iloc for positional indexing\n",
+      "\n",
+      "See the documentation here:\n",
+      "http://pandas.pydata.org/pandas-docs/stable/indexing.html#deprecate_ix\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -48,27 +81,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5551838.0</td>\n",
+       "      <td>5650829.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>7863369.0</td>\n",
+       "      <td>7974065.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5352663.0</td>\n",
+       "      <td>5444256.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5784464.0</td>\n",
+       "      <td>5754192.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4867012.0</td>\n",
+       "      <td>4853082.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -76,11 +109,11 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5551838.0\n",
-       "1  30475  7863369.0\n",
-       "2  30476  5352663.0\n",
-       "3  30477  5784464.0\n",
-       "4  30478  4867012.0"
+       "0  30474  5650829.0\n",
+       "1  30475  7974065.0\n",
+       "2  30476  5444256.0\n",
+       "3  30477  5754192.0\n",
+       "4  30478  4853082.0"
       ]
      },
      "execution_count": 2,
@@ -294,6 +327,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -306,27 +352,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5253741.5</td>\n",
+       "      <td>5276311.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8001455.0</td>\n",
+       "      <td>8111741.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5493946.0</td>\n",
+       "      <td>5291116.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5442932.0</td>\n",
+       "      <td>5578066.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>5147530.0</td>\n",
+       "      <td>4928869.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -334,11 +380,11 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5253741.5\n",
-       "1  30475  8001455.0\n",
-       "2  30476  5493946.0\n",
-       "3  30477  5442932.0\n",
-       "4  30478  5147530.0"
+       "0  30474  5276311.5\n",
+       "1  30475  8111741.5\n",
+       "2  30476  5291116.0\n",
+       "3  30477  5578066.5\n",
+       "4  30478  4928869.5"
       ]
      },
      "execution_count": 3,
@@ -414,6 +460,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -426,27 +485,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5072660.0</td>\n",
+       "      <td>5382616.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8023735.5</td>\n",
+       "      <td>8108945.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5274591.0</td>\n",
+       "      <td>5110883.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5597474.5</td>\n",
+       "      <td>5226355.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4715896.5</td>\n",
+       "      <td>4718412.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -454,11 +513,11 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5072660.0\n",
-       "1  30475  8023735.5\n",
-       "2  30476  5274591.0\n",
-       "3  30477  5597474.5\n",
-       "4  30478  4715896.5"
+       "0  30474  5382616.0\n",
+       "1  30475  8108945.0\n",
+       "2  30476  5110883.0\n",
+       "3  30477  5226355.5\n",
+       "4  30478  4718412.5"
       ]
      },
      "execution_count": 4,
@@ -590,20 +649,21 @@
     "result[\"price_doc\"] = np.exp( .7*np.log(result.price_doc_follow) + \n",
     "                              .3*np.log(result.price_doc_gunja) )\n",
     "result.drop([\"price_doc_louis\",\"price_doc_bruno\",\"price_doc_follow\",\"price_doc_gunja\"],axis=1,inplace=True)\n",
-    "result.head()\n",
-    "result.to_csv('submission_jun5_3_seed37_withoutYear.csv', index=False)"
+    "result.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "result.to_csv('submission_jun8_4_seed125_Last_iteration_withoutYear.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
