--- a/Latest_Iteration_MultiplierTuning_2.ipynb
+++ b/Latest_Iteration_MultiplierTuning_2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -33,17 +33,17 @@
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "micro_humility_factor = .99     #    range from 0 (complete humility) to 1 (no humility)\n",
-    "macro_humility_factor = 0.96\n",
+    "micro_humility_factor = 1     #    range from 0 (complete humility) to 1 (no humility)\n",
+    "macro_humility_factor = 0.965\n",
     "jason_weight = .2\n",
     "bruno_weight = .2\n",
     "reynaldo_weight = 1 - jason_weight - bruno_weight\n",
-    "seed = 5"
+    "seed = 125"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -164,7 +164,7 @@
        "6593788.9177278513"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -225,7 +225,7 @@
        "7773440.7512406502"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -251,10 +251,10 @@
     {
      "data": {
       "text/plain": [
-       "6637341.6089051161"
+       "6631881.8293717252"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -333,27 +333,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5632583.0</td>\n",
+       "      <td>5789526.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8103520.5</td>\n",
+       "      <td>7922576.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5599423.5</td>\n",
+       "      <td>5730028.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5845963.0</td>\n",
+       "      <td>5844774.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4970532.0</td>\n",
+       "      <td>4872749.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -361,14 +361,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5632583.0\n",
-       "1  30475  8103520.5\n",
-       "2  30476  5599423.5\n",
-       "3  30477  5845963.0\n",
-       "4  30478  4970532.0"
+       "0  30474  5789526.0\n",
+       "1  30475  7922576.0\n",
+       "2  30476  5730028.5\n",
+       "3  30477  5844774.0\n",
+       "4  30478  4872749.5"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -557,10 +557,10 @@
     {
      "data": {
       "text/plain": [
-       "6848545.0"
+       "6840405.5"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -618,27 +618,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5548605.0</td>\n",
+       "      <td>5445102.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8466520.0</td>\n",
+       "      <td>8371235.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5481566.5</td>\n",
+       "      <td>5460380.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5629051.0</td>\n",
+       "      <td>5756511.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>5264548.5</td>\n",
+       "      <td>5086542.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -646,14 +646,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5548605.0\n",
-       "1  30475  8466520.0\n",
-       "2  30476  5481566.5\n",
-       "3  30477  5629051.0\n",
-       "4  30478  5264548.5"
+       "0  30474  5445102.5\n",
+       "1  30475  8371235.0\n",
+       "2  30476  5460380.5\n",
+       "3  30477  5756511.0\n",
+       "4  30478  5086542.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -716,10 +716,10 @@
     {
      "data": {
       "text/plain": [
-       "6867420.0"
+       "6861757.5"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -786,27 +786,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5522187.0</td>\n",
+       "      <td>5554802.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8077244.0</td>\n",
+       "      <td>8368358.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5338578.0</td>\n",
+       "      <td>5274382.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5637760.0</td>\n",
+       "      <td>5393550.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>5038952.5</td>\n",
+       "      <td>4869359.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -814,14 +814,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5522187.0\n",
-       "1  30475  8077244.0\n",
-       "2  30476  5338578.0\n",
-       "3  30477  5637760.0\n",
-       "4  30478  5038952.5"
+       "0  30474  5554802.5\n",
+       "1  30475  8368358.0\n",
+       "2  30476  5274382.5\n",
+       "3  30477  5393550.5\n",
+       "4  30478  4869359.5"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -942,10 +942,10 @@
     {
      "data": {
       "text/plain": [
-       "6774162.0"
+       "6769383.0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1003,27 +1003,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5560001.0</td>\n",
+       "      <td>5534343.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8314010.0</td>\n",
+       "      <td>8278959.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5475916.0</td>\n",
+       "      <td>5475195.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5673535.0</td>\n",
+       "      <td>5699337.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>5159003.5</td>\n",
+       "      <td>4999228.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1031,14 +1031,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5560001.0\n",
-       "1  30475  8314010.0\n",
-       "2  30476  5475916.0\n",
-       "3  30477  5673535.0\n",
-       "4  30478  5159003.5"
+       "0  30474  5534343.5\n",
+       "1  30475  8278959.5\n",
+       "2  30476  5475195.0\n",
+       "3  30477  5699337.5\n",
+       "4  30478  4999228.5"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 91,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1109,27 +1109,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5368491.5</td>\n",
+       "      <td>5331994.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8094075.5</td>\n",
+       "      <td>8075632.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5285654.0</td>\n",
+       "      <td>5273268.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5480382.5</td>\n",
+       "      <td>5495917.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4973673.0</td>\n",
+       "      <td>4801415.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1137,14 +1137,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5368491.5\n",
-       "1  30475  8094075.5\n",
-       "2  30476  5285654.0\n",
-       "3  30477  5480382.5\n",
-       "4  30478  4973673.0"
+       "0  30474  5331994.0\n",
+       "1  30475  8075632.5\n",
+       "2  30476  5273268.0\n",
+       "3  30477  5495917.0\n",
+       "4  30478  4801415.5"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 97,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1175,7 +1175,7 @@
    },
    "outputs": [],
    "source": [
-    "sub.to_csv('submission_jun7_5_Seed5_microHumanilityPt99_Latest_Iteration_2.csv', index=False)"
+    "sub.to_csv('submission_jun8_5__Seed125_maroHumanilityPt965_Latest_Iteration_2.csv', index=False)"
    ]
   },
   {
@@ -1185,6 +1185,15 @@
     "collapsed": true,
     "deletable": true,
     "editable": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
