--- a/Initial_XGB_2_Additional_Features.ipynb
+++ b/Initial_XGB_2_Additional_Features.ipynb
@@ -1828,11 +1828,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eXtreme Gradient Boosting regression...\n",
+      "Best Params:\n",
+      "([mean: -0.45907, std: 0.04900, params: {'reg_alpha': 8000000.0}, mean: -0.45762, std: 0.04818, params: {'reg_alpha': 10000000.0}, mean: -0.45785, std: 0.04751, params: {'reg_alpha': 15000000.0}], {'reg_alpha': 10000000.0})\n",
+      "Best CV Score:\n",
+      "0.457621258027\n",
+      "10.931350414\n"
+     ]
+    }
+   ],
    "source": [
     "#del xgbreg\n",
     "t0=time()\n",
