--- a/Initial_XGB_2_Additional_Features.ipynb
+++ b/Initial_XGB_2_Additional_Features.ipynb
@@ -1550,7 +1550,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
